swagger tuning
