# docs/swagger.json
@@ -4,7 +4,7 @@
     ],
     "swagger": "2.0",
     "info": {
-        "description": "A dummy service that takes a request, sends own request to another service and then conducts response back to user.",
+        "description": "A dummy service that takes a request, sends own request to another service and then conducts response back to user. Sample creds (test_user/test_pass)",
         "title": "Fiber Swagger Example API",
         "termsOfService": "http://swagger.io/terms/",
         "contact": {},
@@ -28,9 +28,72 @@
                     "application/json"
                 ],
                 "tags": [
-                    "register"
+                    "BusinessLogic"
                 ],
                 "summary": "Register endpoint",
+                "parameters": [
+                    {
+                        "description": "Register Body",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/service.RequestRegisterItems"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ResponseToFront"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ErrorResponseToFront"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ErrorResponseToFront"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ErrorResponseToFront"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ErrorResponseToFront"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/schedule": {
+            "post": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
+                "description": "schedule something with this request.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "BusinessLogic"
+                ],
+                "summary": "Schedule endpoint",
                 "parameters": [
                     {
                         "description": "Register Body",
